# Modern-CMake-for-Cpp

examples/chapter08/01-no-framework/: CMakeLists.txt  readme.md
examples/chapter08/01-no-framework/test/: CMakeLists.txt
examples/chapter08/02-structured/src/: run.cpp
